remove database connection

--- a/index.html
+++ b/index.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<?php
-session_start();
-$user = "";
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Algorithm Quiz Game</title>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="shortcut icon" href="data/images/icon.png" type="image/x-icon" />
+  </head>
 
-if (isset($_SESSION['username'])) {
-  $user = $_SESSION['username'];
-}
-?>
-
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Algorithm Quiz Game</title>
-  <link rel="stylesheet" href="./styles/style.css" />
-  <link rel="shortcut icon" href="data/images/icon.png" type="image/x-icon" />
-</head>
-
-<body>
-  <div class="login-container">
+  <body>
+    <!-- <div class="login-container">
     <div class="user-con">
       <div class="user-img-con">
         <img src="data/images/user.png" alt="">
@@ -27,8 +17,8 @@ if (isset($_SESSION['username'])) {
       <span><?php echo $user; ?></span>
     </div>
     <a href="./php/logout.php"><button>Log out</button></a>
-  </div>
-  <div class="overlay"></div>
+  </div> -->
+    <!-- <div class="overlay"></div>
   <div class="form-container-login slide-in-top">
     <div class="close-container"><span class="close-btn">x</span></div>
     <h2>Login to Play!</h2>
@@ -41,9 +31,9 @@ if (isset($_SESSION['username'])) {
 
       <input type="submit" value="Login">
     </form>
-  </div>
+  </div> -->
 
-  <div class="form-container-reg slide-in-top">
+    <!-- <div class="form-container-reg slide-in-top">
     <div class="close-container"><span class="close-btn">x</span></div>
     <h2>Create New Account</h2>
     <form id="reg-form" method="post">
@@ -60,30 +50,27 @@ if (isset($_SESSION['username'])) {
       <input type="number" id="new-age" name="new-age" required>
       <input type="submit" name='register' value="Register">
     </form>
-  </div>
+  </div> -->
 
+    <div class="main-wrapper" id="main-wrapper">
+      <div class="title-container">
+        <h1>
+          Ready for a challenge? <br />
+          Dive into the game and test your skills!
+        </h1>
+      </div>
 
-  <div class="main-wrapper" id="main-wrapper">
-    <div class="title-container">
-      <h1>
-        Ready for a challenge? <br />
-        Dive into the game and test your skills!
-      </h1>
+      <div class="button-container">
+        <button class="btn primary" id="sorting">Sorting Algorithm</button>
+        <button class="btn tertiary" id="binary">Binary Algorithm</button>
+      </div>
+    </div>
+    <div id="bern"></div>
+    <div id="bern1"></div>
+    <div class="ground">
+      <div class="grass"></div>
     </div>
 
-    <div class="button-container">
-      <button class="btn primary" id="sorting">Sorting Algorithm</button>
-      <button class="btn tertiary" id="binary">Binary Algorithm</button>
-    </div>
-  </div>
-  <div id="bern"></div>
-  <div id="bern1"></div>
-  <div class="ground">
-    <div class="grass"></div>
-  </div>
-
-  <script src="script/animation.js"></script>
-  </script>
-</body>
-
+    <script src="script/animation.js"></script>
+  </body>
 </html>
